
source_set("jsbinding") {
  sources = [
    "GBridge.cpp",
    "GBridge.h",
    "GBinding.cpp",
    "GBinding.h",
    "GBindingGlobal.cpp",
    "GBindingGlobal.h",
    "GBindingConsole.cpp",
    "GBindingConsole.h",
    "GBindingConvertor.cpp",
    "GBindingConvertor.h",
  ]

  public_configs = [ "$flutter_root:config" ]

  deps = [
    "//third_party/tonic",
    "$flutter_root/runtime",
  ]
}
